# dataviz-course

./: .env.example  .gitignore  .marimo.toml  AGENTS.md  CLAUDE.md  Final Mini-Project Rubric for PSL IASD 2026.md  LICENSE  README.md  course_data.py  course_env.py  pyproject.toml
.cursor/rules/: marimo-pair-editing.mdc
notebooks/: 01_matplotlib_seaborn.py  02_gog_altair.py  03_eda_open_food_facts.py  03_quiz.md  03_storytelling.py  04_ml_viz_open_food_facts.py  05_embeddings.py  06_quiz_scores.py  07_chart_scoring.py
reviews/: 01_matplotlib_seaborn_review.md
session6/: README.md  build_off_db.py  export_tableau_csv.py  nao.md  off_dashboard_queries.py  streamlit_app.py  tableau.md
session6/nao-workspace/: RULES.md  nao_config.yaml
slides/: .gitignore  global-bottom.vue  package.json  session6_dashboarding.md  slides.md  style.css  vite.config.ts
slides/layouts/: one-col-footer.vue  quote.vue  two-cols-footer.vue
