[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dataviz-workshop"
version = "0.1.0"
description = "Python Data Visualization Workshop: matplotlib → seaborn → altair"
requires-python = ">=3.11"
dependencies = [
    "marimo==0.23.8",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "altair==6.1.0",
    "vega-datasets==0.9.0",
    "seaborn==0.13.2",
    "matplotlib==3.10.9",
    "scikit-learn==1.8.0",
    "skrub==0.9.0",
    "polars==1.40.1",
    "duckdb==1.5.3",
    "pyarrow==24.0.0",
    "skore==0.18.0",
    "vegafusion==2.0.3",
    "vl-convert-python==1.9.0.post1",
    "requests==2.34.2",
]

[tool.marimo.runtime]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["course_data"]

[tool.uv]
package = true
