[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dataviz-workshop"
version = "0.1.0"
description = "Python Data Visualization Workshop: matplotlib → seaborn → altair"
requires-python = ">=3.11"
dependencies = [
    "marimo==0.23.8",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "altair==6.1.0",
    "vega-datasets==0.9.0",
    "seaborn==0.13.2",
    "matplotlib==3.10.9",
    "scikit-learn==1.8.0",
    "skrub==0.9.0",
    "polars==1.40.1",
    "duckdb==1.5.3",
    "pyarrow==24.0.0",
    "skore[hub]==0.18.0",
    "vegafusion==2.0.3",
    "vl-convert-python==1.9.0.post1",
    "requests==2.34.2",
    "openpyxl==3.1.5",
    "python-dotenv==1.2.2",
    # Session 4 (mlflow metadata still says pandas<3; override below keeps pandas 3.0.3)
    "mlflow==3.12.0",
    "xgboost==3.1.3",
    "shap==0.51.0",
    "numba==0.65.1",
    "llvmlite==0.47.0",
    "umap-learn==0.5.12",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "black==26.5.1", "ruff==0.15.15"]
# Session 6 Streamlit track: `uv sync --extra s6`
s6 = ["streamlit==1.58.0"]
# Session 5 embeddings: install ad hoc (datasets, sentence-transformers — kept
# out of uv.lock because the GPU-related sub-deps are heavy and optional)


[tool.marimo.runtime]
pythonpath = ["."]

[tool.setuptools]
py-modules = ["course_data", "course_env"]

[tool.uv]
package = true
# mlflow 3.12 metadata: pandas<3, pyarrow<24 (works with pandas 3 / pyarrow 24 in practice)
override-dependencies = ["pandas==3.0.3", "pyarrow==24.0.0"]
# shap+numba on Intel Mac is unsatisfiable with numpy 2.4; lock for Linux + Apple Silicon
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32'",
]
